feat: init database connection user module
