# src/modules/users/dto/create.user.dto.go
@@ -1,0 +1,6 @@
+package dto
+
+type CreateUserDTO struct {
+	Name  string  `json:"name" binding:"required"`
+	Email *string `json:"email"`
+}
