# src/modules/users/dto/update.user.dto.go
@@ -1,0 +1,6 @@
+package dto
+
+type UpdateUserDTO struct {
+	Name  *string `json:"name"`
+	Email *string `json:"email"`
+}
